--- a/views/events/create-event.pug
+++ b/views/events/create-event.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/events/create-event.css', type='text/css')
     form(id='create-event-form' action='/create-event' method='POST')
         div(class='form-group')
