--- a/views/events/event-view.pug
+++ b/views/events/event-view.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
         link(rel='stylesheet', href='../../public/css/ranking.css', type='text/css' )
         script(src="../../public/js/event.view.ajax.js")
         div(class="container-fluid row")
