--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/users/register.css', type='text/css' )
     != messages()
     form(id='register-form' action='/register' method='POST')
