--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,30 +1,6 @@
-#home-nav {
-    margin: 0;
-    padding: 0;
-    display: block;
-    margin-left: 30%;
-    margin-top: 3%;
-}
-
-#home-nav a {
-    margin: 0;
-    padding: 0;
-    background-color: #A01D26;
-    color: #F4F4EF;
-    font-size: 1.5rem;
+ #home-buttons{
+     margin-left: 39%;
+ }
+#home-buttons .btn {
     margin-left: 1%;
-    padding: 1% 3% 1% 3%;       
-}
-#home-nav p{
-    margin-top: 1%;
-    color: #A01D26;
-}
-#home-text{
-    margin-left: 2.5%;
-    margin-top: 5%;
-    font-size: 1.8rem;  
-    color: #A01D26;
-}
-.home-nav-left{
-    margin-left: 25%;
 }
