--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
     div(class="container-fluid row col-md-12" id="wrapper")
         div(class="col-md-3" id="left")
