--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -1,5 +1,5 @@
 extend ../common/_master
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/about.css', type='text/css' )
     
