--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -1,19 +1,26 @@
 extend ../common/_master
 
-block body
-    link(rel='stylesheet', href='../../public/css/home.css', type='text/css' )
-    div(class="text-center" id="home-text")
-        p
-            | If you don't want to miss the latest tech conf
-        p
-            | or just want to attend the most epic parties
-        p
-            | we've got you covered
-    div(class="row" id="home-nav")
-        a(class="col-md-3 text-center" href="/browse-events" id="browse-events-btn-left")
-            |Browse Events
-        unless user
-            p(class="col-md-1 text-center")
-                |or
-            a(class="col-md-3 text-center" href="/login" id="sign-in-btn")
-                |Sign In
+block main
+    link(rel='stylesheet', href='../../public/css/home.css', type='text/css')
+    script(src="../../public/js/carousel.js")
+    div(class="row")
+        div(class="container flow-text" id="home-text")
+            p(class="center-align grey-text text-darken-4")
+                | Check out our top rated events:
+    div(class="carousel")
+        a(class="carousel-item" href="#one!")
+            img(src="https://lorempixel.com/250/250/nature/1")
+        a(class="carousel-item" href="#two!")
+            img(src="https://lorempixel.com/250/250/nature/2")
+        a(class="carousel-item" href="#three!")
+            img(src="https://lorempixel.com/250/250/nature/3")
+        a(class="carousel-item" href="#four!")
+            img(src="https://lorempixel.com/250/250/nature/4")
+        a(class="carousel-item" href="#five!")
+            img(src="https://lorempixel.com/250/250/nature/5")   
+    div(class="row" id="home-buttons") 
+        a(class="btn deep-orange col s5 m4 l2" href="/browse-events" id="browse-events-btn")
+            |Browse More
+        unless user      
+        a(class="btn deep-orange col s4 m4 l2" href="/login" id="sign-in-btn")
+            |Sign In
