--- a/views/navigation/ranking.pug
+++ b/views/navigation/ranking.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
         link(rel='stylesheet', href='../../public/css/ranking.css', type='text/css' )
         div(class="container-fluid row")
                 div(class="col-md-4")
