--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,7 +1,7 @@
 extend ../common/_master
 
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/users/signin.css', type='text/css' )
     != messages()
     form(id='login-form' action='/login' method='POST')
