--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -1,6 +1,6 @@
 extend ../common/_master
 
-block body
+block main
     link(rel='stylesheet', href='../../public/css/users/profile.css', type='text/css' )
     #profile-container.col-xs-12.col-sm-6.col-sm-offset-3.col-md-6.col-md-offset-3
         .well.well-sm
