--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -2,11 +2,9 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/home.css', type='text/css')
-    script(src="../../public/js/carousel.js")
-    div(class="row")
-        div(class="container flow-text" id="home-text")
-            p(class="center-align grey-text text-darken-4")
-                | Check out our top rated events:
+    div(class="flow-text")
+        p(class="center-align grey-text text-darken-4")
+            | Check out our top rated events:
     div(class="carousel")
         a(class="carousel-item" href="#one!")
             img(src="https://lorempixel.com/250/250/nature/1")
@@ -18,9 +16,11 @@ block main
             img(src="https://lorempixel.com/250/250/nature/4")
         a(class="carousel-item" href="#five!")
             img(src="https://lorempixel.com/250/250/nature/5")   
-    div(class="row" id="home-buttons") 
+    div(class="row center-align" id="home-buttons") 
         a(class="btn deep-orange col s5 m4 l2" href="/browse-events" id="browse-events-btn")
             |Browse More
         unless user      
-        a(class="btn deep-orange col s4 m4 l2" href="/login" id="sign-in-btn")
-            |Sign In
+            a(class="btn deep-orange col s4 m4 l2" href="/login" id="sign-in-btn")
+                |Sign In
+    script(src="../../public/js/carousel.js")
+    
