--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -5,7 +5,7 @@ block main
     div(class="flow-text")
         p(class="center-align grey-text text-darken-4")
             | Check out our top rated events:
-    div(class="carousel")
+    div(class="carousel" id="home-top-events")
         a(class="carousel-item" href="#one!")
             img(src="https://lorempixel.com/250/250/nature/1")
         a(class="carousel-item" href="#two!")
