--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -1,29 +1,27 @@
 extend ../common/_master
 
 block main
-    link(rel='stylesheet', href='../../public/css/users/profile.css', type='text/css' )
-    #profile-container.col-xs-12.col-sm-6.col-sm-offset-3.col-md-6.col-md-offset-3
-        .well.well-sm
-            .row
-                .col-sm-6.col-md-4
-                    //- img.img-rounded.img-responsive(src=user.imageUrl, alt=user.username)                
-                .col-sm-6.col-md-8.text-center
-                    h4#name
-                        span#first-name= user.firstName + ' '
-                        span#last-name= user.lastName                        
-                    h4#username
-                        = user.username
-                    i.glyphicon.glyphicon-map-marker
-                        = user.city
-                    br
-                    i.glyphicon.glyphicon-envelope
-                        = user.email
-                    br
-                    
-                    form(action="/user/profile/edit")
-                        button.btn.btn-primary
-                            | Edit 
-
-    form(action="/user/create-event")
-        button
-            |Create event
+    link(rel='stylesheet', href='../../public/css/users/profile.css', type='text/css')
+    div(class="row")
+        div(class="card col s6 m5 l3" id="profile-container")
+            img(class="responsive-img circle" src="#{user.imageUrl}")
+            p(class="flow-text")
+                |Username: #{user.username}
+            p(class="flow-text")
+                |Firstname: #{user.firstName}
+            p(class="flow-text")
+                |Lastname: #{user.lastName}
+            p(class="flow-text")
+                |City: #{user.city}
+            p(class="flow-text")
+                |Lastname: #{user.email}
+        div(class="col s6 m5 l3" id="profile-buttons")
+            form(action="/user/profile/edit")
+                button(class="btn deep-orange")
+                    |Edit profile
+            form(action="/user/create-event")
+                button(class="btn deep-orange")
+                    |Create event
+            form(action="/user/my-events")
+                button(class="btn deep-orange")
+                    |My events
