Simple reformating and renaming

--- a/views/events/create-event.pug
+++ b/views/events/create-event.pug
@@ -47,7 +47,7 @@ block main
                         input(type="file")                 
                     div(class="file-path-wrapper")
                     input(class="file-path validate" type="text")
-            button(type='sumbit' class='btn deep-orange' id='create-event-btn')
+            button(type='submit' class='btn deep-orange' id='create-event-btn')
                     |Create event
             script(src="../../public/js/events/datepicker.js")
             script(src="../../public/js/events/timepicker.js")
