Added chat with socket.io TODO:// fix chat ui

--- a/views/common/_nav.pug
+++ b/views/common/_nav.pug
@@ -24,3 +24,6 @@ mixin nav()
                 li(class="" id="navbar-profile")                
                     a(href='/login')
                         | Login
+            li(class="" id="navbar-chat")
+                a(href='/chat')
+                   | Join chat
