--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -2,6 +2,7 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
+    form(id='browse-events-form' class="col s6" action='/browse-events' method='POST')
     div(class="row")
         div(class="col s3")
             div(class="row")
@@ -9,7 +10,7 @@ block main
                     div(class="row")
                         div(class="input-field col s12")
                             i(class="material-icons prefix")|textsms    
-                            input(type="text" id="eventName" class="autocomplete")
+                            input(name="eventName" type="text" id="eventName" class="autocomplete")
                             label(for="eventName")
                                 |Search event by name:
             div(class="row")
@@ -17,7 +18,7 @@ block main
                     div(class="row")
                         div(class="input-field col s12")
                             i(class="material-icons prefix")|location_on    
-                            input(type="text" id="eventLocation" class="autocomplete")
+                            input(name="location" type="text" id="eventLocation" class="autocomplete")
                             label(for="eventLocation")
                                 |Search event by location:
             div(class="row")
@@ -25,7 +26,7 @@ block main
                     div(class="row")
                         div(class="input-field col s12")    
                             i(class="material-icons prefix")|find_replace
-                            input(type="text" id="eventType" class="autocomplete")
+                            input(name="type" type="text" id="eventType" class="autocomplete")
                             label(for="eventType")
                                 |Search event by type:
             div(class="row")
