Browse events forms added

--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -35,5 +35,88 @@ block main
                         div(class="input-field col s12")
                             i(class="material-icons prefix")|date_range                                                        
                             input(type="date" class="datepicker")
+            button(class="btn deep-orange")
+                |Search
+        div(class="col s9" id="events-box")
+            div(class="row")
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more                                     
+            div(class="row")
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more
+                div(class="col s4 event-view")
+                    div(class="card")
+                        div(class="card-image")
+                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                            span(class="card-title")
+                                |Event name
+                        div(class="card-content")
+                            p
+                                |I am a very simple card. I am good at containing small bits of information.
+                                |I am convenient because I require little markup to use effectively.
+                        div(class="card-action")
+                            a(href="#")
+                                |View more         
     script(src="../../public/js/events/datepicker.js")
 
