--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -2,4 +2,15 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/about.css', type='text/css' )
-    
+    div(class="carousel" id="home-top-events")
+        a(class="carousel-item" href="#one!")
+            img(src="https://lorempixel.com/250/250/nature/1")
+        a(class="carousel-item" href="#two!")
+            img(src="https://lorempixel.com/250/250/nature/2")
+        a(class="carousel-item" href="#three!")
+            img(src="https://lorempixel.com/250/250/nature/3")
+        a(class="carousel-item" href="#four!")
+            img(src="https://lorempixel.com/250/250/nature/4")
+        a(class="carousel-item" href="#five!")
+            img(src="https://lorempixel.com/250/250/nature/5")   
+    script(src="../../public/js/carousel.js")
