--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -4,55 +4,55 @@ block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
     script(src="public/js/events/autocomplete.js")
     form(id='browse-events-form' class="col s6" action='/browse-events' method='POST')
-    div(class="row")
-        div(class="col s3")
-            div(class="row")
-                div(class="col s12")
-                    div(class="row")
-                        div(class="input-field col s12")
-                            i(class="material-icons prefix")|textsms    
-                            input(name="eventName" type="text" id="eventName" class="autocomplete")
-                            label(for="eventName")
-                                |Search event by name:
-            div(class="row")
-                div(class="col s12")
-                    div(class="row")
-                        div(class="input-field col s12")
-                            i(class="material-icons prefix")|location_on    
-                            input(name="location" type="text" id="eventLocation" class="autocomplete")
-                            label(for="eventLocation")
-                                |Search event by location:
-            div(class="row")
-                div(class="col s12")
-                    div(class="row")
-                        div(class="input-field col s12")    
-                            i(class="material-icons prefix")|find_replace
-                            input(name="type" type="text" id="eventType" class="autocomplete")
-                            label(for="eventType")
-                                |Search event by type:
-            div(class="row")
-                div(class="col s12")
-                    div(class="row")
-                        div(class="input-field col s12")
-                            i(class="material-icons prefix")|date_range                                                        
-                            input(type="date" class="datepicker")
-            button(class="btn deep-orange")
-                |Search
-        div(class="col s9" id="events-box")
-            div(class="row")
-            each event in events
-                div(class="col s4 event-view")
-                    div(class="card")
-                        div(class="card-image")
-                            img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
-                            span(class="card-title")
-                                |#{event.eventName}
-                        div(class="card-content")
-                            p
-                                |I am a very simple card. I am good at containing small bits of information.
-                                |I am convenient because I require little markup to use effectively.
-                        div(class="card-action")
-                            a(href="#")
-                                |View more 
+        div(class="row")
+            div(class="col s3")
+                div(class="row")
+                    div(class="col s12")
+                        div(class="row")
+                            div(class="input-field col s12")
+                                i(class="material-icons prefix")|textsms    
+                                input(name="eventName" type="text" id="eventName" class="autocomplete")
+                                label(for="eventName")
+                                    |Search event by name:
+                div(class="row")
+                    div(class="col s12")
+                        div(class="row")
+                            div(class="input-field col s12")
+                                i(class="material-icons prefix")|location_on    
+                                input(name="eventLocation" type="text" id="eventLocation" class="autocomplete")
+                                label(for="eventLocation")
+                                    |Search event by location:
+                div(class="row")
+                    div(class="col s12")
+                        div(class="row")
+                            div(class="input-field col s12")    
+                                i(class="material-icons prefix")|find_replace
+                                input(name="eventType" type="text" id="eventType" class="autocomplete")
+                                label(for="eventType")
+                                    |Search event by type:
+                div(class="row")
+                    div(class="col s12")
+                        div(class="row")
+                            div(class="input-field col s12")
+                                i(class="material-icons prefix")|date_range                                                        
+                                input(name="eventDate" type="date" class="datepicker")
+                button(type='submit' class='btn deep-orange' id='search-event-btn')
+                    |Search
+            div(class="col s9" id="events-box")
+                div(class="row")
+                each event in events
+                    div(class="col s4 event-view")
+                        div(class="card")
+                            div(class="card-image")
+                                img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+                                span(class="card-title")
+                                    |#{event.eventName}
+                            div(class="card-content")
+                                p
+                                    |I am a very simple card. I am good at containing small bits of information.
+                                    |I am convenient because I require little markup to use effectively.
+                            div(class="card-action")
+                                a(href="#")
+                                    |View more 
     script(src="../../public/js/events/datepicker.js")
 
