--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -52,7 +52,24 @@ block main
                                     |I am a very simple card. I am good at containing small bits of information.
                                     |I am convenient because I require little markup to use effectively.
                             div(class="card-action")
-                                a(href="#")
-                                    |View more 
+                                a(href="#modal1" class="modal-trigger")
+                                    |View more
+                    div(id="modal1" class="modal modal-fixed-footer")
+                        div(class="modal-content row")
+                            div(class="col s6")
+                                img(src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg" class="modal-image")
+                            div(class="col s6")
+                                h4(class="col s12")
+                                    |#{event.eventName}
+                                p
+                                    |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                    |Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        div(class="modal-footer")
+                            button(class="modal-action modal-close waves-effect waves-green btn-flat " id="participate-btn")
+                                |Participate
+                            a(href="/manage-event" class="modal-action modal-close waves-effect waves-green btn-flat ")
+                                |Manage 
+                            a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
+                                |Bring me back   
     script(src="../../public/js/events/datepicker.js")
-
+    script(src="../../public/js/modal.js")
