--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -4,6 +4,7 @@ block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
     script(src="public/js/events/autocomplete.js")
     script(src="public/js/events/view.event.js")
+    script(src="public/js/events/join.event.js")
     form(id='browse-events-form' class="col s6" action='/browse-events' method='POST')
         div(class="row")
             div(class="col s3")
@@ -66,11 +67,14 @@ block main
                                     |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                     |Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         div(class="modal-footer")
-                            button(class="modal-action modal-close waves-effect waves-green btn-flat " id="participate-btn")
-                                |Participate
-                            a(href="/manage-event" class="modal-action modal-close waves-effect waves-green btn-flat ")
-                                |Manage 
-                            a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
-                                |Bring me back   
+                            div(class="progress")
+                                div(class="indeterminate")
+                            div(class="btn-container hidden")
+                                button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
+                                    |Participate
+                                button(id="manage-btn" href="/manage-event" class="modal-action modal-close waves-effect waves-green btn-flat")
+                                    |Manage 
+                                a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat")
+                                    |Bring me back   
     script(src="../../public/js/events/datepicker.js")
     script(src="../../public/js/modal.js")
